--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,15 @@ jobs:
 
     steps:
       - name: Use Node.js ${{ env.node-version }}
-          uses: actions/setup-node@v3
-          with:
-            node-version: ${{ env.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ env.node-version }}
 
       - name: Checkout
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Install Dependencies
-      - run: npm ci
+        run: npm ci
 
       - name: Build
         run: npm run build
@@ -32,9 +32,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: './dist'
-          
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
-      
-
